--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
        </header>
        <main>
+              <!---teams section--->
               <section class="temas display-flex">
                      <div class="team-image-container">
                             <img src="images/team1.png" alt="teams are discussing about design">
@@ -41,10 +42,21 @@
 
                      </div>
                      <div class="our-features">
-                            <h3 class="feature-title"><span id="Quick" class="text-lightgrey">Quick list</span> <span>of Our </span><span>Features</span></h3>
-                            <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                            <h3 class="section-title"><span id="Quick" class="text-lightgrey">Quick list</span> <span>of Our </span><span class="text-primary">Features</span></h3>
+                            <p class="feature-description text-lightgrey">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                             <button class="btn-primary">Explore More</button>
                      </div>
+              </section>
+              <!--teams enjoy-->
+              <section>
+                     
+
+              </section>
+
+              <!--some facts-->
+              <section class="some facts">
+                     <h3 class="section-title">Some Facts</h3>
+                     <p class="text-light-grey">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
               </section>
               
 
